--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-      "start": "node index.js",
-      "test": "jest"
+        "start": "node index.js",
+        "test": "jest"
     },
     "dependencies": {
-      "body-parser": "^1.19.0",
-      "express": "^4.17.1",
-      "mysql2": "^2.1.0"
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "mysql2": "^2.1.0"
     },
     "devDependencies": {
-      "jest": "^26.6.2",
-      "supertest": "^4.0.2"
+        "jest": "^26.6.2",
+        "mysql-mock": "^1.0.2",
+        "supertest": "^4.0.2"
     },
     "author": "Abby Chau",
     "license": "MIT"
